<Final Draft HW1>

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
     </header>
 
+    <div id="background-container"></div>
     <!-- About Me Page-->
     <div id="entire-page-container" class="container">
         <!-- Large left-aligned box w text -->
