--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                             required="required"></textarea>
                         </li>    
                     </ul>
-                    <input type="submit" name="submit">
+                    <input type="submit" name="submit" id="submit">
                 </form>
 
             </section>
