--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>About Me</title>
+    <title>Renee H. Reynolds</title>
     <link rel="stylesheet" type="text/css" href="css/meyers-reset.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
