--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Me</title>
+    <title>Renee H. Reynolds</title>
     <link rel="stylesheet" type="text/css" href="css/meyers-reset.css"/>
     <link rel="stylesheet" type="text/css" href="css/style.css"
 </head>
